clears float to avoid overlaps.

--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -91,3 +91,7 @@ nav ul li{
     margin-right: 15px;
     margin-bottom: 15px;
 }
+
+.p-float{
+    clear: left;
+}
